--- a/index.html
+++ b/index.html
@@ -506,7 +506,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Gallery</h2>
+        <h2 class="lang lang-en">Gallery</h2>
+        <h2 class="lang lang-ar">صور</h2>
         <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
 
@@ -514,12 +515,17 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+          <ul class="portfolio-filters isotope-filters lang lang-en" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">Branches</li>
             <li data-filter=".filter-product">Working</li>
-            <!-- <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li> -->
+            
+          </ul>
+          <ul class="portfolio-filters isotope-filters lang lang-ar" data-aos="fade-up" data-aos-delay="100">
+            <li data-filter="*" class="filter-active">الجميع</li>
+            <li data-filter=".filter-app">الفروع</li>
+            <li data-filter=".filter-product">عمل</li>
+            
           </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -599,47 +605,82 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
 
             <div class="faq-container">
-              <div class="faq-item faq-active">
-                <h3 class="lang lang-en">1. What types of auto glass services do you offer?</h3>
-                <h3 class="lang lang-ar">ما هي أنواع خدمات زجاج السيارات التي تقدمها؟ .١ </h3>
+              <div class="faq-item lang lang-en">
+                <h3><span class="num">1.</span><span>What types of auto glass services do you offer?</span></h3>
                 <div class="faq-content">
                   <p class="bi bi-arrow-right lang lang-en"> We provide auto glass repair, replacement, and tinting services for windshields, side windows, rear windows, and mirrors.</p>
-                  <p class="bi bi-arrow-left lang lang-ar"> نحن نقدم خدمات إصلاح زجاج السيارات واستبداله وتلوينه للزجاج الأمامي والنوافذ الجانبية والنوافذ الخلفية والمرايا.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+              </div>
 
-              <div class="faq-item">
-                <h3 class="lang lang-en"><span class="num">2.</span> <span>Do you offer mobile services?</span></h3>
+              <div class="faq-item lang lang-ar">
+                <h3><span class="num">١.</span><span>ما هي أنواع خدمات زجاج السيارات التي تقدمها؟</span></h3>
                 <div class="faq-content">
-                  <p class="bi bi-arrow-right class="lang lang-en""> Yes, we can come to your location for on-site repairs or replacements, saving you time and hassle.</p>
+                  <p class="bi bi-arrow-left"> نحن نقدم خدمات إصلاح زجاج السيارات واستبداله وتلوينه للزجاج الأمامي والنوافذ الجانبية والنوافذ الخلفية والمرايا.</p>
                 </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+                <i class="faq-toggle bi bi-chevron-left"></i>
+              </div><!-- End Faq item 1-->
 
-              <div class="faq-item">
-                <h3 class="lang lang-en"><span class="num">3.</span> <span>How long does it take to replace a windshield?</span></h3>
+              <div class="faq-item lang lang-en">
+                <h3><span class="num">2.</span> <span> Do you offer mobile services?</span></h3>
                 <div class="faq-content">
-                  <p class="bi bi-arrow-right class="lang lang-en""> A typical windshield replacement takes about 1-2 hours, depending on the vehicle and the type of glass required.</p>
+                  <p class="bi bi-arrow-right"> Yes, we can come to your location for on-site repairs or replacements, saving you time and hassle.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+
+              <div class="faq-item lang lang-ar">
+                <h3><span class="num">٢.</span><span> هل تقدمون خدمات الهاتف المحمول؟</span></h3>
+                <div class="faq-content">
+                  <p class="bi bi-arrow-left">نعم، يمكننا الحضور إلى موقعك لإجراء الإصلاحات أو الاستبدالات في الموقع، مما يوفر لك الوقت والجهد.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-left"></i>
+              </div><!-- End Faq item 2-->
+
+              <div class="faq-item lang lang-en">
+                <h3><span class="num">3.</span> <span> How long does it take to replace a windshield?</span></h3>
+                <div class="faq-content">
+                  <p class="bi bi-arrow-right"> A typical windshield replacement takes about 1-2 hours, depending on the vehicle and the type of glass required.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
+              <div class="faq-item lang lang-ar">
+                <h3><span class="num">٣.</span> <span>كم من الوقت يستغرق استبدال الزجاج الأمامي؟</span></h3>
+                <div class="faq-content">
+                  <p class="bi bi-arrow-left"> يستغرق استبدال الزجاج الأمامي للسيارة عادةً ما بين ساعة إلى ساعتين، وذلك حسب نوع السيارة ونوع الزجاج المطلوب.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-left"></i>
+              </div><!-- End Faq item 3-->
 
-              <div class="faq-item">
-                <h3><span class="num">4.</span> <span>Do I need to make an appointment for service?</span></h3>
+              <div class="faq-item lang lang-en">
+                <h3><span class="num">4.</span> <span> Do I need to make an appointment for service?</span></h3>
                 <div class="faq-content">
                   <p class="bi bi-arrow-right"> While appointments are recommended, we also accept walk-ins at our garage. For mobile services, it's best to call ahead to schedule a visit.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+              </div>
+              <div class="faq-item lang lang-ar">
+                <h3><span class="num">٤.</span> <span>هل أحتاج إلى حجز موعد للخدمة؟</span></h3>
+                <div class="faq-content">
+                  <p class="bi bi-arrow-left"> مع أننا نوصي بحجز موعد مسبق، إلا أننا نقبل أيضًا زيارة الورشة دون موعد مسبق. للحصول على خدماتنا المتنقلة، يُفضل الاتصال مسبقًا لحجز موعد.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-left"></i>
+              </div><!-- End Faq item 4-->
 
-              <div class="faq-item">
-                <h3><span class="num">5.</span> <span>What types of vehicles do you service?</span></h3>
+              <div class="faq-item lang lang-en">
+                <h3><span class="num">5.</span> <span>  What types of vehicles do you service?</span></h3>
                 <div class="faq-content">
                   <p class="bi bi-arrow-right"> We service all types of vehicles, including cars, trucks, vans, and SUVs.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
+              </div>
+              <div class="faq-item lang lang-ar">
+                <h3><span class="num">٥.</span> <span>ما هي أنواع المركبات التي تقومون بخدمتها؟</span></h3>
+                <div class="faq-content">
+                  <p class="bi bi-arrow-left"> نحن نقدم خدماتنا لجميع أنواع المركبات، بما في ذلك السيارات والشاحنات والشاحنات الصغيرة وسيارات الدفع الرباعي.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-left"></i>
+              </div><!-- End Faq item 5-->
 
             </div>
 
@@ -656,7 +697,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
+        <h2 class="lang lang-en">Contact</h2>
+        <h2 class="lang lang-ar">اتصال</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
