--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2 class="lang lang-en">Services</h2>
-        <h2 class="lang lang-en">Services</h2>
+        <h2 class="lang lang-ar">Services</h2>
         <p class="lang lang-en">"At Watam Auto Glass, we offer expert auto glass services both at our garage and at your location for your convenience."</p>
         <p class="lang lang-ar">"نحن نقدم خدمات زجاج السيارات المتخصصة سواء في المرآب الخاص بنا أو في موقعك لراحتك."</p>
       </div><!-- End Section Title -->
