--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
               <p class="lang lang-ar">"ساعدنا على خدمتك بشكل أفضل"</p>
               
 
-              <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" netlify>
                 <div class="row gy-4">
 
                   <div class="col-md-6">
