--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <section id="hero" class="hero section">
       <h1 id="wlc" class="lang lang-en">welcome</h1>
       <h1 id="wlc" class="lang lang-ar">مرحباً</h1>
-      <h2 id="slog" class="lang lang-en">Your Trusted Auto Glass Experts</h2>
-      <h2 id="slog" class="lang lang-ar">خبراء زجاج السيارات الموثوق بهم</h2>
+      <!-- <h2 id="slog" class="lang lang-en">Your Trusted Auto Glass Experts</h2>
+      <h2 id="slog" class="lang lang-ar">خبراء زجاج السيارات الموثوق بهم</h2> -->
         <div>
           <a href="#about" id="btn-get-started" class="lang lang-en"> <i class="fa fa-caret-down" style="font-size:20px"></i></a>
         </div>
@@ -305,9 +305,10 @@
               <h3>
                 <a>
                    <span>Watam Auto Glass</span> W02
-                </a><br><br>
-              </h3><br>
-              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Opening Soon!</p><br><br><br>
+                </a>
+              </h3>
+              <p class="lang lang-en">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Opening Soon!</p><br><br><br>
+              <p class="lang lang-ar">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;الافتتاح قريبا</p><br><br><br>
             </article>
           </div>
 
