--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <h1 id="wlc" class="lang lang-en">welcome</h1>
-      <h1 id="wlc" class="lang lang-ar">مرحباً</h1>
-      <!-- <h2 id="slog" class="lang lang-en">Your Trusted Auto Glass Experts</h2>
-      <h2 id="slog" class="lang lang-ar">خبراء زجاج السيارات الموثوق بهم</h2> -->
+      
         <div>
           <a href="#about" id="btn-get-started" class="lang lang-en"> <i class="fa fa-caret-down" style="font-size:20px"></i></a>
         </div>
@@ -153,30 +150,7 @@
               </div>
             </div>
 
-            <div class="info-wrapper">
-              <div class="row gy-4">
-                <div class="col-lg-5">
-                  <div class="profile d-flex align-items-center gap-3">
-                    <img src="assets/img/person/p1.png" alt="CEO Profile" class="profile-image">
-                    <div>
-                      <h4 class="profile-name">Mohammed Alezzi</h4>
-                      <p class="profile-position lang lang-en">Marketing Director</p>
-                      <p class="profile-position lang lang-ar">مدير التسويق</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-7">
-                  <div class="contact-info d-flex align-items-center gap-2">
-                    <i class="bi bi-telephone-fill"></i>
-                    <div>
-                      <p class="contact-label lang lang-en">Call us anytime</p>
-                      <p class="contact-label lang lang-ar">اتصل بنا في أي وقت</p>
-                      <p class="contact-number">0505282955</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <!--  -->
           </div>
 
           <div class="col-xl-6" data-aos="fade-up" data-aos-delay="300">
@@ -721,7 +695,7 @@
                 </div>
                 <div class="content">
                   <h4 class="lang lang-en">Our Location</h4>
-                  <h4 class="lang lang-ar">موقعنا</h4>
+                  <h4 class="lang lang-ar">الرياض</h4>
                   <p>Riyadh</p>
                 </div>
               </div>
