--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <img src="assets/img/round-logo.png" alt="">
         <h1 class="navbar-brand lang lang-en"><span>&nbsp; Watam </span>Auto Glass</h1>
-        <h1 class="navbar-brand lang lang-ar active"><span>جلاس </span>واتام أوتو</h1>
+        <h1 class="navbar-brand lang lang-ar active"><span>&nbsp;وتم</span> لزجاج السيارات</h1>
       </a>
-
       <nav id="navmenu" class="navmenu">
         
         <ul class="d-flex align-items-center list-unstyled gap-3">
@@ -269,7 +268,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0144231907">0144231907</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/VJTaJ62kzrJkzGKi6">Omer bin Alkattab Rd, Tabuk</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/VJTaJ62kzrJkzGKi6" target="_blank">Omer bin Alkattab Rd, Tabuk</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 1:00 PM) - (4:00 PM - 10:00 PM) <br> Fri (3:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -294,7 +293,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0539931180">0539931180</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/U5iHs3AwxaYdqf9B8">Almadina Almunaorah Rd, Riyadh</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/U5iHs3AwxaYdqf9B8" target="_blank">Almadina Almunaorah Rd, Riyadh</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 12:00 PM) - (2:00 PM - 9:00 PM) <br> Fri (3:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -307,7 +306,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0539220075">0539220075</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/EBc7iJ6i9umhoubV9">Almasaanaa, Al haeer Rd, Riyadh</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/EBc7iJ6i9umhoubV9" target="_blank">Almasaanaa, Al haeer Rd, Riyadh</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 9:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -320,7 +319,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0539957110">0539957110</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/9T8FqDFM33evirR76">Al Kharj Rd, Riyadh</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/9T8FqDFM33evirR76" target="_blank">Al Kharj Rd, Riyadh</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 9:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -333,7 +332,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0538990773">0538990773</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/8SpCaxgwyMWdk3Nv9">Prince Bander bin Abdulaziz Rd, Riyadh</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/8SpCaxgwyMWdk3Nv9" target="_blank">Prince Bander bin Abdulaziz Rd, Riyadh</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 9:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -346,7 +345,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0537788320">0537788320</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/1PD38hMPbvDmVgMN9">Alrasras Rd, Khamis Mushait</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/1PD38hMPbvDmVgMN9" target="_blank">Alrasras Rd, Khamis Mushait</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 12:00 PM) - (3:00 PM - 10:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -359,7 +358,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0539444679">0539444679</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/v3CDEpbmJyGkhnHdA">King Fahad Rd, Sabya</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/v3CDEpbmJyGkhnHdA" target="_blank">King Fahad Rd, Sabya</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 12:00 PM) - (3:00 PM - 10:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -372,7 +371,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0556443371">0556443371</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/bCsC9QUh1qiiUNxu5">Prince Sultan Rd, Alnahdhah, Abo Arish</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/bCsC9QUh1qiiUNxu5" target="_blank">Prince Sultan Rd, Alnahdhah, Abo Arish</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 12:00 PM) - (3:00 PM - 10:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
@@ -385,7 +384,7 @@
                 </a>
               </h3>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i><a href="callto:0534488769">0534488769</a></p>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/z7uVaUxgdhJWvcqd7">King Abdullaziz Rd, Jazan</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-geo-alt me-2"></i><a href="https://maps.app.goo.gl/z7uVaUxgdhJWvcqd7" target="_blank">King Abdullaziz Rd, Jazan</a></p>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-clock me-2"></i>Opening Hours: <br> Sat-Thu (8:00 AM- 12:00 PM) - (3:00 PM - 10:00 PM) <br> Fri (2:00 PM - 9:00 PM)</p>
             </article>
           </div>
