--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 </a></li>
           <li class="nav-item"><a href="#" id="langToggle" >عربي</a></li>
         </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        <div class="mobileNavToogle">
+          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+
+        </div>
+
       </nav>
       
 
