--- a/index.html
+++ b/index.html
@@ -735,28 +735,8 @@
               <h3 class="lang lang-ar">تعليق</h3>
               <p class="lang lang-en">“Help us to serve you better"</p>
               <p class="lang lang-ar">"ساعدنا على خدمتك بشكل أفضل"</p>
-              <form name="contact" method="POST" data-netlify="true">
-  <p>
-    <label>Your Name: <input type="text" name="name" /></label>
-  </p>
-  <p>
-    <label>Your Email: <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
-</form>
 
-              <form  method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" netlify>
+              <form  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" data-netlify="true">
                 <div class="row gy-4">
 
                   <div class="col-md-6">
