--- a/index.html
+++ b/index.html
@@ -736,7 +736,23 @@
               <p class="lang lang-en">“Help us to serve you better"</p>
               <p class="lang lang-ar">"ساعدنا على خدمتك بشكل أفضل"</p>
 
-              <form  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" data-netlify="true">
+              <form name="contact" method="POST" data-netlify="true">
+  <p>
+  <input type="text" name="name" placeholder="Your Name"/>
+  </p>
+  <p>
+    <input type="email" name="email" placeholder="Your Email"/>
+  </p>
+ 
+  <p>
+    <textarea name="message" placeholder="Message"></textarea>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
+
+              <!-- <form  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" data-netlify="true">
                 <div class="row gy-4">
 
                   <div class="col-md-6">
@@ -773,7 +789,7 @@
                   
 
                 </div>
-              </form>
+              </form> -->
 
             </div>
           </div>
