--- a/index.html
+++ b/index.html
@@ -744,10 +744,7 @@
     <label>Your Email: <input type="email" name="email" /></label>
   </p>
   <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
+    <label>Subject: <input type="text" name="role[]" /></label>
   </p>
   <p>
     <label>Message: <textarea name="message"></textarea></label>
