--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
     <label>Your Email: <input type="email" name="email" /></label>
   </p>
   <p>
-    <label>Subject: <input type="text" name="role[]" /></label>
+    <label>Subject: <input type="text" name="subject" /></label>
   </p>
   <p>
     <label>Message: <textarea name="message"></textarea></label>
@@ -758,23 +758,23 @@
                 <div class="row gy-4">
 
                   <div class="col-md-6">
-                    <input type="text" name="name" class="form-control lang lang-en" placeholder="Your Name" required="">
-                    <input type="text" name="name" class="form-control lang lang-ar" placeholder="اسمك" required="">
+                    <input type="text" name="name" class="form-control lang lang-en" placeholder="Your Name" required="" />
+                    <input type="text" name="name" class="form-control lang lang-ar" placeholder="اسمك" required="" />
                   </div>
                   
                   <div class="col-md-6 ">
-                    <input type="email" class="form-control lang lang-en" name="email" placeholder="Your Email" required="">
-                    <input type="email" class="form-control lang lang-ar" name="email" placeholder="بريدك الإلكتروني" required="">
+                    <input type="email" class="form-control lang lang-en" name="email" placeholder="Your Email" required="" />
+                    <input type="email" class="form-control lang lang-ar" name="email" placeholder="بريدك الإلكتروني" required="" />
                   </div>
 
                   <div class="col-12">
-                    <input type="text" class="form-control lang lang-en" name="subject" placeholder="Subject" required="">
-                    <input type="text" class="form-control lang lang-ar" name="subject" placeholder="موضوع" required="">
+                    <input type="text" class="form-control lang lang-en" name="subject" placeholder="Subject" required="" />
+                    <input type="text" class="form-control lang lang-ar" name="subject" placeholder="موضوع" required="" />
                   </div>
 
                   <div class="col-12">
-                    <textarea class="form-control lang lang-en" name="message" rows="6" placeholder="Message" required=""></textarea>
-                    <textarea class="form-control lang lang-ar" name="message" rows="6" placeholder="رسالة" required=""></textarea>
+                    <textarea class="form-control lang lang-en" name="message" rows="6" placeholder="Message" required="" />
+                    <textarea class="form-control lang lang-ar" name="message" rows="6" placeholder="رسالة" required="" />
                   </div>
 
                   <div class="col-12 text-center">
