--- a/index.html
+++ b/index.html
@@ -750,14 +750,16 @@
     <input type="text" class="form-control lang lang-ar" name="subject" placeholder="يرسل"/>
   </p>
   <p>
-  <textarea name="message" class="form-control lang lang-en" placeholder="يرسل"></textarea>
+  <textarea name="message" class="form-control lang lang-en" placeholder="Message"></textarea>
   <textarea name="message" class="form-control lang lang-ar" placeholder="يرسل"></textarea>
   </p>
-  <div class="lang lang-en">
+  <div>
                     <button type="submit" class="btn lang lang-en">Send Message</button>
                   
                   </div>
-                  <div class="lang lang-ar"><button type="submit" class="btn lang lang-ar">إرسال رسالة</button></div>
+                  <div>
+                    <button type="submit" class="btn lang lang-ar">إرسال رسالة</button>
+                  </div>
                   
 
                 </div>
