--- a/index.html
+++ b/index.html
@@ -753,16 +753,9 @@
   <textarea name="message" class="form-control lang lang-en" placeholder="Message"></textarea>
   <textarea name="message" class="form-control lang lang-ar" placeholder="يرسل"></textarea>
   </p>
-  <div>
-                    <button type="submit" class="btn lang lang-en">Send Message</button>
-                  
-                  </div>
-                  <div>
-                    <button type="submit" class="btn lang lang-ar">إرسال رسالة</button>
-                  </div>
-                  
-
-                </div>
+  <p>
+    <button type="submit" class="btn"><i class="fa-solid fa-paper-plane"></i></button>
+  </p>
 </form>
 
               <!-- <form  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" data-netlify="true">
