--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
   <textarea name="message" class="form-control lang lang-ar" placeholder="يرسل"></textarea>
   </p>
   <p>
-    <button type="submit" class="btn"><i class="fa-solid fa-paper-plane"></i></button>
+    <button type="submit" class="btn">Send</button>
   </p>
 </form>
 
