--- a/index.html
+++ b/index.html
@@ -754,11 +754,11 @@
   <textarea name="message" class="form-control lang lang-ar" placeholder="يرسل"></textarea>
   </p>
   <p>
-    <button type="submit" class="btn lang lang-en">Send</button>
+    <button type="submit" class="btn">Send</button>
   </p>
-  <p>
+  <!-- <p>
     <button type="submit" class="btn lang lang-ar">يرسل</button>
-  </p>
+  </p> -->
 </form>
 
               <!-- <form  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" data-netlify="true">
