--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
   <textarea name="message" class="form-control lang lang-ar" placeholder="يرسل"></textarea>
   </p>
   <p>
-    <button type="submit" class="btn">Send</button>
+    <button type="submit">Send</button>
   </p>
   <!-- <p>
     <button type="submit" class="btn lang lang-ar">يرسل</button>
