--- a/index.html
+++ b/index.html
@@ -736,29 +736,25 @@
               <p class="lang lang-en">“Help us to serve you better"</p>
               <p class="lang lang-ar">"ساعدنا على خدمتك بشكل أفضل"</p>
 
-         <form name="contact" class="php-email-form" method="POST" data-netlify="true">
+         <form name="contact" method="POST" netlify>
   <p>
-  <input type="text" class="form-control lang lang-en" name="name" placeholder="Your Name" />
-   <input type="text" class="form-control lang lang-ar" name="name" placeholder="يرسل" />
+    <label>Your Name: <input type="text" name="name" /></label>
   </p>
   <p>
-    <input type="email" class="form-control lang lang-en" name="email" placeholder="Email"/>
-    <input type="email" class="form-control lang lang-ar" name="email" placeholder="يرسل"/>
+    <label>Your Email: <input type="email" name="email" /></label>
   </p>
   <p>
-    <input type="text" class="form-control lang lang-en" name="subject" placeholder="Subject"/>
-    <input type="text" class="form-control lang lang-ar" name="subject" placeholder="يرسل"/>
+    <label>Your Role: <select name="role[]" multiple>
+      <option value="leader">Leader</option>
+      <option value="follower">Follower</option>
+    </select></label>
   </p>
   <p>
-  <textarea name="message" class="form-control lang lang-en" placeholder="Message"></textarea>
-  <textarea name="message" class="form-control lang lang-ar" placeholder="يرسل"></textarea>
+    <label>Message: <textarea name="message"></textarea></label>
   </p>
   <p>
     <button type="submit">Send</button>
   </p>
-  <!-- <p>
-    <button type="submit" class="btn lang lang-ar">يرسل</button>
-  </p> -->
 </form>
 
               <!-- <form  method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" name="contact" data-netlify="true">
