--- a/index.html
+++ b/index.html
@@ -738,22 +738,19 @@
 
          <form name="contact" method="POST" netlify>
   <p>
-    <label>Your Name: <input type="text" name="name" /></label>
+    <label>Name: <input type="text" name="name" /></label>
   </p>
   <p>
-    <label>Your Email: <input type="email" name="email" /></label>
+    <label>Email: <input type="email" name="email" /></label>
   </p>
   <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
+    <label>Subject: <input type="text" name="subject" /></label>
   </p>
   <p>
     <label>Message: <textarea name="message"></textarea></label>
   </p>
   <p>
-    <button type="submit">Send</button>
+    <button type="submit" class="btn">Send</button>
   </p>
 </form>
 
