--- a/index.html
+++ b/index.html
@@ -740,21 +740,33 @@
   <p>
     <!-- <label>Name: <input type="text" class="form-control" name="name" /></label> -->
      <input type="text" name="name" class="form-control lang lang-en" placeholder="Your Name" required="" />
+  </p>
+  <p>
+    <!-- <label>Name: <input type="text" class="form-control" name="name" /></label> -->
                     <input type="text" name="name" class="form-control lang lang-ar" placeholder="اسمك" required="" />
   </p>
   <p>
     <!-- <label>Email: <input type="email" class="form-control" name="email" /></label> -->
       <input type="email" class="form-control lang lang-en" name="email" placeholder="Your Email" required="" />
+  </p>
+  <p>
+    <!-- <label>Email: <input type="email" class="form-control" name="email" /></label> -->
                     <input type="email" class="form-control lang lang-ar" name="email" placeholder="بريدك الإلكتروني" required="" />
   </p>
   <p>
     <!-- <label>Subject: <input type="text" class="form-control" name="subject" /></label> -->
      <input type="text" class="form-control lang lang-en" name="subject" placeholder="Subject" required="" />
+  </p>
+  <p>
+    <!-- <label>Subject: <input type="text" class="form-control" name="subject" /></label> -->
                     <input type="text" class="form-control lang lang-ar" name="subject" placeholder="موضوع" required="" />
   </p>
   <p>
     <!-- <label>Message: <textarea name="message" class="form-control"></textarea></label> -->
      <textarea class="form-control lang lang-en" name="message" rows="6" placeholder="Message" required="" ></textarea>
+  </p>
+  <p>
+    <!-- <label>Message: <textarea name="message" class="form-control"></textarea></label> -->
                     <textarea class="form-control lang lang-ar" name="message" rows="6" placeholder="رسالة" required=""></textarea>
   </p>
   <p>
